--- a/src/app/components/course-slider/course-slider/course-slider.component.html
+++ b/src/app/components/course-slider/course-slider/course-slider.component.html
@@ -29,7 +29,7 @@
             <div><i class="fa-solid fa-user-tie"></i>{{ course.students }} Students</div>
           </div> -->
           <div class="author">
-            <img src="./images/course.jpeg" alt="Author">
+            <img src="./images/author.png" alt="Author">
             <div class="author-info">Course • By Kenny Weiss</div>
           </div>
           <div class="price-row">
