--- a/src/app/layout/courses/courses.component.html
+++ b/src/app/layout/courses/courses.component.html
@@ -9,7 +9,7 @@
 <main  class="mt pt-4" *ngIf="!loading">
  <div *ngIf="services?.length">
     <section class="sourses-section">
-        <div class="course-heading">
+        <div class="container course-heading">
             <h5 class="tag-line">Learn from me</h5>
             <h3>Courses and Master Classes</h3>
         </div>
