--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -51,7 +51,7 @@
                     </ul>
                 </li>
 
-                <li><a routerLink="/contact" routerLinkActive="active"
+                <li class="mb4"><a routerLink="/contact" routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }">Contact</a></li> 
                         
                 <li><a routerLink="/book-session" class="contact-nav">Book a Session</a></li>
