--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -439,8 +439,10 @@
 
     <section class="courses-master-classes">
         <div class="course-heading" data-aos="fade-up" data-aos-duration="100">
+            <div class="container">
             <h5 class="tag-line">Learn from me</h5>
             <h3 class="title">Courses and Master Classes</h3>
+        </div>
         </div>
         <div class="container">
             <app-course-slider />
