--- a/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
+++ b/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
@@ -103,10 +103,10 @@
                                 <div><i class="fa-solid fa-calendar-days"></i> May 14, 2022</div>
                                 <div><i class="fa-solid fa-user-tie"></i> Worst Day Cycle</div>
                             </div> 
-                              <div [innerHTML]="getShortContent(wdcpost.excerpt?.rendered || wdcpost.content?.rendered, 15) "></div>
+                              <div class="ptext" [innerHTML]="getShortContent(wdcpost.excerpt?.rendered || wdcpost.content?.rendered, 15) "></div>
                             <div class="author">
                                 <div>
-                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
+                                    <img src="images/author.png" alt="Author" loading="lazy">
                                     <div class="author-info">
                                         <span>By : Kenny Weiss</span> 
                                     </div>
