--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,7 +26,16 @@ h6 {
     font-family: "Montserrat", sans-serif;
     line-height: 1.3em;
 }
-
+h1 {
+    font-size: 2.6em;
+    line-height: 1.1;
+    margin-bottom: 20px;
+}
+h2 {
+    font-size: 2.2em;
+    line-height: 1.1;
+    margin-bottom: 20px;
+}
 .mt-3 {
     margin-top: 30px !important;
 }
@@ -652,12 +661,9 @@ img.banner-shep {
     display: none;
 }
 
-.banner-content h1 {
-    font-size: 2.6em;
-    color: #ffffff;
-    margin-bottom: 15px;
-    line-height: 1.1;
+.banner-content h1 { 
     text-transform: uppercase;
+    color: #ffffff;
 }
 
 .banner-content p {
