--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -192,7 +192,7 @@
             <div class="testimonia-row">
                 <div class="testimonial-text">
                     <h5 class="tag-line">Testimonials</h5>
-                    <h3>Trusted by the world's fastest growing companies</h3>
+                    <h3>Trusted by the world’s fastest growing community of people</h3>
                     <div class="testimonial-navigation">
                         <button class="swiper-button-next"></button>
                         <button class="swiper-button-prev"></button>
