--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -49,8 +49,7 @@
                         The final unsolved piece isn’t in the latest strategy — it’s often buried in your childhood
                         experiences.
                     </p>
-                    <br>
-                    <br>
+                    <br> 
                     <h4>Let me explain:</h4>
                     <p>Think about it. As kids, we weren’t just growing physically.<br>
                         We were also absorbing emotional cues from our environment 24/7.</p>
@@ -72,8 +71,7 @@
                         adult life will reflect that missing foundation — no matter how hard you try to “think
                         positive” or “stay motivated.”
                     </p>
-                    <br>
-                    <br>
+                    <br> 
                     <h4>For example — let’s talk about introversion.</h4>
 
                     <p>Some people are naturally introverted, and that’s beautiful.
@@ -103,8 +101,7 @@
                     </p>
 
 
-                    <br>
-                    <br>
+                    <br> 
                     <h4>And this is just one example.</h4>
                     <p>There are dozens of patterns like this — and once you see it, you can’t unsee it.</p>
 
@@ -126,8 +123,7 @@
                     <p>They realize: “Wait… that’s me.”</p>
                     <p>And that’s the beginning of healing.</p>
 
-                    <br>
-                    <br>
+                    <br> 
                     <h4>Here's the truth:</h4>
                     <p>You're not broken.<br>
                         You were just never taught how to:
@@ -144,8 +140,7 @@
                             <p>Or believe that you’re safe and worthy just as you are.</p>
                         </li>
                     </ul>
-                    <br>
-                    <br>
+                    <br> 
                     <h4>The good news?</h4>
                     <p>Just like you learned those coping mechanisms, you can unlearn them.<br>
                         You can rewire your emotional patterns, feel secure in your relationships, and reconnect
@@ -155,7 +150,7 @@
                         To gently explore not what’s wrong with you — but what happened to you.<br>
                         And from there, start giving yourself the emotional safety and care you never got back then.
                     </p>
-                    <h5>Because you're not broken. You're just unfinished. And that’s something you can change.</h5>
+                    <p class="bold">Because you're not broken. You're just unfinished. And that’s something you can change.</p>
                     <a href="book-session.html" class="button">Start Healing What Was Left Unfinished</a>
 
 
@@ -321,7 +316,7 @@
             <div class="testimonia-row">
                 <div class="testimonial-text">
                     <h5 class="tag-line">Testimonials</h5>
-                    <h3>Trusted by the world's fastest growing companies</h3>
+                    <h3>Trusted by the world’s fastest growing community of people</h3>
                     <div class="testimonial-navigation">
                         <button class="swiper-button-next"></button>
                         <button class="swiper-button-prev"></button>
