--- a/src/app/components/course-slider/course-slider/course-slider.component.html
+++ b/src/app/components/course-slider/course-slider/course-slider.component.html
@@ -23,7 +23,9 @@
             </div>
           </div>
           <h4  [innerHTML]="service.title.rendered"> </h4>
+          <div class="heightmin">
           <p>{{ getShortText(service.acf?.banner_desc, 15) }}</p>
+          </div>
           <!-- <div class="info">
             <div><i class="fa-solid fa-book"></i>{{ course.lessons }} Lessons</div>
             <div><i class="fa-solid fa-user-tie"></i>{{ course.students }} Students</div>
