--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -416,7 +416,7 @@
                         and create change not just emotionally, but neurologically.</p><br>
 
                     <p>It’s where <b>inner work meets brain science —</b> and the results are
-                        life-changing.</p><br>
+                        life-changing.</p>
 
                     <a routerLink="/book-session" class="button mt-3">Talk to Kenny</a>
 
